added pagination and search to players page (closes #10)

--- a/src/Hvz/GameBundle/Resources/views/Admin/users.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/users.html.twig
@@ -7,7 +7,7 @@
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-button/paper-button.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-dialog/paper-dialog.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-dialog/paper-dialog-transition.html') }}">
-		<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-input/paper-input.html') }}">
+	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-input/paper-input.html') }}">
 {% endblock %}
 
 {% block toolbar %}
@@ -61,15 +61,17 @@
 	{% endfor %}
 
 	{% if previous_page is defined or next_page is defined %}
-		<div class="card">
-			<paper-shadow z="1"></paper-shadow>
-			<div class="card-internal" horizontal layout center wrap center-justified>
-				{% if previous_page is defined and previous_page != -1 %}
-					<a href="{{ path('hvz_admin_users', {'page': previous_page}) }}"><paper-button label="<<"></paper-button></a>
-				{% endif %}
-				{% if next_page is defined and next_page != -1 %}
-					<a href="{{ path('hvz_admin_users', {'page': next_page}) }}"><paper-button label=">>"></paper-button></a>
-				{% endif %}
+		<div horizontal layout center center-justified>
+			<div class="card">
+				<paper-shadow z="1"></paper-shadow>
+				<div class="card-internal" horizontal layout center wrap center-justified>
+					{% if previous_page is defined and previous_page != -1 %}
+						<a href="{{ path('hvz_admin_users', {'page': previous_page}) }}"><paper-button label="<<"></paper-button></a>
+					{% endif %}
+					{% if next_page is defined and next_page != -1 %}
+						<a href="{{ path('hvz_admin_users', {'page': next_page}) }}"><paper-button label=">>"></paper-button></a>
+					{% endif %}
+				</div>
 			</div>
 		</div>
 	{% endif %}
