--- a/src/Hvz/GameBundle/Resources/views/Admin/profiles.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/profiles.html.twig
@@ -42,15 +42,17 @@
 	{% endfor %}
 
 	{% if previous_page is defined or next_page is defined %}
-		<div class="card">
-			<paper-shadow z="1"></paper-shadow>
-			<div class="card-internal" horizontal layout center wrap center-justified>
-				{% if previous_page is defined and previous_page != -1 %}
-					<a href="{{ path('hvz_admin_profiles', {'page': previous_page}) }}"><paper-button label="<<"></paper-button></a>
-				{% endif %}
-				{% if next_page is defined and next_page != -1 %}
-					<a href="{{ path('hvz_admin_profiles', {'page': next_page}) }}"><paper-button label=">>"></paper-button></a>
-				{% endif %}
+		<div horizontal layout center center-justified>
+			<div class="card">
+				<paper-shadow z="1"></paper-shadow>
+				<div class="card-internal" horizontal layout center wrap center-justified>
+					{% if previous_page is defined and previous_page != -1 %}
+						<a href="{{ path('hvz_admin_profiles', {'page': previous_page}) }}"><paper-button label="<<"></paper-button></a>
+					{% endif %}
+					{% if next_page is defined and next_page != -1 %}
+						<a href="{{ path('hvz_admin_profiles', {'page': next_page}) }}"><paper-button label=">>"></paper-button></a>
+					{% endif %}
+				</div>
 			</div>
 		</div>
 	{% endif %}
