tag id numbers are now correct

--- a/src/Hvz/GameBundle/Resources/views/Admin/print.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/print.html.twig
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 			<div class="bottom">
-				{% for tag in profile.tags %}
+				{% for tag in profile.tags|reverse %}
 					{% if loop.index < 3 %}
 						<hr>
 						<p>Tag #{{ loop.index }}: {{ tag }}</p>
