fixed for realsies this time

--- a/src/Hvz/GameBundle/Resources/views/Admin/print.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/print.html.twig
@@ -26,7 +26,7 @@
 				{% for tag in profile.tags|reverse %}
 					{% if loop.index < 3 %}
 						<hr>
-						<p>Tag #{{ loop.index }}: {{ tag }}</p>
+						<p>Tag #{{ loop.length - loop.index + 1 }}: {{ tag }}</p>
 					{% endif %}
 				{% endfor %}
 			</div>
