--- a/src/Hvz/GameBundle/Resources/views/Admin/users.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/users.html.twig
@@ -28,7 +28,7 @@
 				<div horizontal layout center wrap center-justified>
 					<paper-input label="Search" floatingLabel id="search_term"></paper-input>
 					<div>
-						<paper-button label="Search" raisedButton onclick="search()"></paper-button>
+						<paper-button label="Search" onclick="search()"></paper-button>
 					</div>
 				</div>
 			</div>
