removed floatingLabel from search

--- a/src/Hvz/GameBundle/Resources/views/Game/players.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/players.html.twig
@@ -42,7 +42,7 @@
 				</form>
 
 				<div horizontal layout center wrap center-justified>
-					<paper-input label="Search" floatingLabel id="search_term"></paper-input>
+					<paper-input label="Search" id="search_term"></paper-input>
 					<div>
 						<paper-button label="Search" onclick="search()"></paper-button>
 					</div>
