--- a/src/Hvz/GameBundle/Resources/views/Admin/missions.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/missions.html.twig
@@ -39,7 +39,7 @@
 				</div>
 			</div>
 			<div style="margin-top: 20px;">
-				{{ mission.body | raw | nl2br }}
+				{{ mission.body | raw }}
 			</div>
 		</div>
 	{% endfor %}
