--- a/src/Hvz/GameBundle/Resources/views/Admin/rules.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/rules.html.twig
@@ -33,7 +33,7 @@
 				</div>
 			</div>
 			<div style="margin-top: 20px;">
-				{{ rule.body | raw | nl2br }}
+				{{ rule.body | raw }}
 			</div>
 		</div>
 	{% endfor %}
