--- a/src/Hvz/GameBundle/Resources/views/Game/missions.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/missions.html.twig
@@ -10,7 +10,7 @@
 			<div class="card-internal">
 				<h1 class="header large-header">{{ mission.title }}</h1>
 				<div>
-					{{ mission.body | raw | nl2br }}
+					{{ mission.body | raw }}
 				</div>
 			</div>
 		</div>
