--- a/src/Hvz/GameBundle/Resources/views/Admin/edit_mission.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/edit_mission.html.twig
@@ -9,6 +9,12 @@
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-radio-group/paper-radio-group.html') }}">
 {% endblock %}
 
+{% block javascripts %}
+	{{ parent() }}
+	
+	<script src="{{ asset('bundles/hvzgame/bower_components/ckeditor/ckeditor.js') }}"></script>
+{% endblock %}
+
 {% block toolbar %}
 	<span flex>Administration: Edit Mission</span>
 {% endblock %}
@@ -20,7 +26,7 @@
 		<paper-shadow z="1"></paper-shadow>
 		<div class="card-internal"  vertical layout center>
 			<paper-input floatinglabel id="p-title" label="Title"></paper-input>
-			<paper-input multiline floatinglabel id="p-body" style="width: 100%;" label="Body"></paper-input>
+			<textarea id="p-body" rows="10" cols="80"></textarea>
 			<p><strong>Post Date:</strong></p>
 			<div horizontal layout wrap>
 				<paper-input floatinglabel id="p-year" label="Year" style="width: 100px;" validate="^[0-9]*$"></paper-input>
@@ -54,7 +60,6 @@
 		var rGameSelect = {};
 		document.addEventListener('polymer-ready', function() {
 			$("#p-title").val($("#form_title").val());
-			$("#p-body").val($("#form_body").val());
 			$("#p-year").val($("#form_postdate_date_year").val());
 			$("#p-month").val($("#form_postdate_date_month").val());
 			$("#p-day").val($("#form_postdate_date_day").val());
@@ -76,6 +81,9 @@
 			});
 
 			$("#p-game").prop("selected", gameSelect[$("#form_game").val()]);
+
+			CKEDITOR.replace('p-body');
+			CKEDITOR.instances['p-body'].setData($("#form_body").val());
 		});
 
 		$(function() {
@@ -87,7 +95,7 @@
 				}
 				else {
 					$("#form_title").val($("#p-title").val());
-					$("#form_body").val($("#p-body").val());
+					$("#form_body").val(CKEDITOR.instances['p-body'].getData());
 					$("#form_postdate_date_year").val($("#p-year").val());
 					$("#form_postdate_date_month").val($("#p-month").val());
 					$("#form_postdate_date_day").val($("#p-day").val());
