update video url

--- a/src/Hvz/GameBundle/Resources/views/Game/video.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/video.html.twig
@@ -15,7 +15,7 @@
 		<div class="card-internal">
 			<h2 class="header">Rules Video</h2>
 			<div>
-				<google-youtube videoid="dZHN4rmiW50">
+				<google-youtube videoid="6b6xwUA1pOA">
 				</google-youtube>
 			</div>
 		</div>
