--- a/src/Hvz/GameBundle/Resources/views/Game/register_tag.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/register_tag.html.twig
@@ -33,7 +33,7 @@
 					AVs must be used before 5PM.
 				</small>
 			</div>
-			<paper-input floatinglabel id="victim_id" label="Victim ID" {% if victim %}value="{{ victim }}"{% endif %}></paper-input>
+			<paper-input floatinglabel id="victim_id" label="Victim Tag" {% if victim %}value="{{ victim }}"{% endif %}></paper-input>
 			<paper-input floatinglabel id="zombie_id" label="Zombie ID" {% if zombie %}value="{{ zombie }}"{% endif %}></paper-input>
 			<paper-button id="submit_tag" label="Submit" raisedButton></paper-button>
 			<div style="margin-top: 5px;">
