--- a/src/Hvz/GameBundle/Resources/views/base.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/base.html.twig
@@ -18,11 +18,11 @@
 
 	{% block javascripts %}
 		<script src="{{ asset('bundles/hvzgame/bower_components/platform/platform.js') }}"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
 	{% endblock %}
 
 	{% block components %}
-		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 
 		<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-icons/core-icons.html') }}">
 	{% endblock components %}
