--- a/src/Hvz/GameBundle/Resources/views/base.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/base.html.twig
@@ -39,7 +39,7 @@
 	{% endblock %}
 
 	{% block body_javascripts %}
-		<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+		<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	{% endblock %}
 </body>
 </html>
