fixed holder.js https cdn

--- a/src/Hvz/GameBundle/Resources/views/Admin/view_profile.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/view_profile.html.twig
@@ -104,5 +104,5 @@
 		}
 	</script>
 
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.3.1/holder.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.3.1/holder.min.js"></script>
 {% endblock %}
