--- a/src/Hvz/GameBundle/Resources/views/Game/players.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/players.html.twig
@@ -108,7 +108,7 @@
 {% block body_javascripts %}
 	{{ parent() }}
 
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.3.1/holder.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.3.1/holder.min.js"></script>
 
 	<script>
 		function search() {
