bolded badge names

--- a/src/Hvz/GameBundle/Resources/views/Game/players.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/players.html.twig
@@ -78,7 +78,7 @@
 									alt="{{ badge.name }} badge">
 							</div>
 							<div tip>
-								<p>{{ badge.name }}</p>
+								<p><strong>{{ badge.name }}</strong></p>
 								<p>{{ badge.description }}</p>
 							</div>
 						</core-tooltip>
