--- a/src/Hvz/GameBundle/Resources/views/Game/video.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/video.html.twig
@@ -36,7 +36,7 @@
 		<div class="card-internal">
 			<h2 class="header">Vestibules / Safe Zones</h2>
 			<div>
-				<p>Note: This is not conclusive. There are way more than the ones listed here.</p>
+				<p>Note: This is not comprehensive. There are way more than the ones listed here.</p>
 				<img src="{{ asset('bundles/hvzgame/images/map_safezones.jpg ')}}" alt="safe zones" width="100%">
 			</div>
 		</div>
