--- a/src/Hvz/GameBundle/Resources/views/Game/status.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/status.html.twig
@@ -35,6 +35,22 @@
 			</div>
 		</div>
 	{% endif %}
+
+	<div class="card" flex vertical layout center center-justified>
+		<paper-shadow z="1"></paper-shadow>
+		<div class="card-internal" vertical layout center center-justified>
+			<h4>Quick Links</h4>
+			<p>
+				<a href="{{ path('hvz_register_tag') }}">register tag</a> |
+				{% if app.user %}
+					<a href="{{ path('hvz_profile') }}">profile</a> |
+					<a href="{{ path('hvz_auth_logout', {'token': csrf_token('hvz_auth_logout')}) }}">logout</a>
+				{% else %}
+					<a href="{{ path('hvz_auth_login') }}">login</a>
+				{% endif %}
+			</p>
+		</div
+	</div>
 {% endblock %}
 
 {% block body_javascripts %}
