added mods/admins tab

--- a/src/Hvz/GameBundle/Resources/views/Game/players.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/players.html.twig
@@ -31,6 +31,7 @@
 		<core-icon icon="filter"></core-icon>
 		<a href="{{ path('hvz_players') }}"><paper-button label="Team"></paper-button></a>
 		<a href="{{ path('hvz_players', {'sort': 'clan'}) }}"><paper-button label="Clan"></paper-button></a>
+		<a href="{{ path('hvz_players', {'sort': 'mods'}) }}"><paper-button label="Mods"></paper-button></a>
 	</div>
 
 	<div horizontal layout center center-justified>
