get ready for an av

--- a/src/Hvz/GameBundle/Resources/views/Game/tags.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/tags.html.twig
@@ -34,4 +34,5 @@
 			</div>
 		</div>
 	{% endif %}
+	<!-- Why hello there! Terry will be sad to see you go, but here's an AV for your investigative skills: -->
 {% endblock %}
