--- a/src/Hvz/GameBundle/Resources/views/Game/register_tag.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/register_tag.html.twig
@@ -30,7 +30,7 @@
 			<div>
 				<small>
 					Enter AV codes in the victim field and the target's player id in the zombie field.
-					AVs must be used before 5PM.
+					AVs cannot be used between 5PM and 11PM, and must be used before 2AM on Friday.
 				</small>
 			</div>
 			<paper-input floatinglabel id="victim_id" label="Victim Tag" {% if victim %}value="{{ victim }}"{% endif %}></paper-input>
