--- a/src/Hvz/GameBundle/Resources/views/base.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/base.html.twig
@@ -1,4 +1,3 @@
-{# src/Hvz/GameBundle/Resources/views/base.html.twig #}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,29 +15,39 @@
 
 	<title>{{ title | default('Humans vs Zombies') }}</title>
 
-	{% block javascripts %}
-		<script src="{{ asset('bundles/hvzgame/bower_components/platform/platform.js') }}"></script>
-	{% endblock %}
-
-	{% block components %}
-		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
-
-		<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-icons/core-icons.html') }}">
-	{% endblock components %}
-
 	{% block stylesheets %}
-		<link rel="stylesheet" href="{{ asset('bundles/hvzgame/css/main.css') }}">
+        {% stylesheets
+            'bundles/hvzgame/bower_components/bootstrap/dist/css/bootstrap.css'
+            'bundles/hvzgame/bower_components/bootswatch/cosmo/bootstrap.css'
+            'bundles/hvzgame/css/app.css'
+            filter='cssrewrite' %}
+            <link rel="stylesheet" href="{{ asst_url }}">
+        {% endstylesheets %}
 	{% endblock %}
+
+    {% block javascripts %}
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    {% endblock %}
 
 	{% block head %}
 	{% endblock %}
 </head>
-<body unresolved>
+<body>
 	{% block body %}
 	{% endblock %}
 
 	{% block body_javascripts %}
-		<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        {% javascripts
+            'bundles/hvzgame/bower_components/jquery/dist/jquery.js'
+            'bundles/hvzgame/bower_components/bootstrap/dist/js/bootstrap.js'
+            'bundles/hvzgame/bower_components/holderjs/holder.js'
+            %}
+            <script type="text/javascript" src="{{ asset_url }}"></script>
+        {% endjavascripts %}
 	{% endblock %}
 </body>
 </html>
