--- a/src/Hvz/GameBundle/Resources/views/Game/status.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/status.html.twig
@@ -1,79 +1,130 @@
-{# src/Hvz/GameBundle/Resources/views/Game/status.html.twig #}
-{% extends 'HvzGameBundle::page.html.twig' %}
+{% extends 'HvzGameBundle::base.html.twig' %}
+{% import 'HvzGameBundle::components.html.twig' as components %}
 
-{% block content %}
-	{{ parent() }}
+{% block body %}
+    {{ parent() }}
 
-	{% if game.time is defined and game.time is not null %}
-		<div class="card card-timer">
-			<paper-shadow z="1"></paper-shadow>
-			<div class="card-internal" vertical layout center center-justified>
-				<h1 id="countdown">{{ game.time.days }} <small>days</small> {{ game.time.hours }} <small>hours</small> {{ game.time.minutes }} <small>minutes</small> {{ game.time.seconds }} <small>seconds</small></h1>
-			</div>
-		</div>
-		<div horizontal layout wrap>
-			<div class="card player-count card-human card-section" flex>
-				<paper-shadow z="1"></paper-shadow>
-				<div class="card-internal" vertical layout center center-justified>
-					<h1>{{ game.humans }}</h1>
-					<h3>Human{% if game.humans != 1 %}s{% endif %}</h3>
-				</div>
-			</div>
-			<div class="card player-count card-zombie card-section" flex>
-				<paper-shadow z="1"></paper-shadow>
-				<div class="card-internal" vertical layout center center-justified>
-					<h1>{{ game.zombies }}</h1>
-					<h3>Zombie{% if game.zombies != 1 %}s{% endif %}</h3>
-				</div>
-			</div>
-		</div>
-	{% else %}
-		<div class="card card-timer" flex>
-			<paper-shadow z="1"></paper-shadow>
-			<div class="card-internal" vertical layout center center-justified>
-				<h1>There is no game currently scheduled</h1>
-			</div>
-		</div>
-	{% endif %}
+    <div class="jumbotron header">
+        <div class="video-container">
+            <video class="header-video" autoplay loop muted>
+                <source src="http://video.webmfiles.org/big-buck-bunny_trailer.webm" type="video/webm"> <!-- todo: replace with actualy video -->
+                <source src="http://video.blendertestbuilds.de/download.blender.org/peach/trailer_480p.mov" type="video/mp4">
+            </video>
+        </div>
+        <div class="container header-text text-center">
+            {% if game.time is defined and game.time is not null %}
+                <h1 id="countdown">
+                    <strong>{{ game.time.days }}</strong> days <strong>{{ game.time.hours }}</strong> hours <strong>{{ game.time.minutes }}</strong> minutes <strong>{{ game.time.seconds }}</strong> seconds
+                </h1>
+            {% else %}
+                <h1>
+                    <strong>There is no game currently scheduled</strong>
+                </h1>
+            {% endif %}
+        </div>
+    </div>
 
-	<div class="card" flex vertical layout center center-justified>
-		<paper-shadow z="1"></paper-shadow>
-		<div class="card-internal" vertical layout center center-justified>
-			<h4>Quick Links</h4>
-			<p>
-				<a href="{{ path('hvz_register_tag') }}">register tag</a> |
-				{% if app.user %}
-					<a href="{{ path('hvz_missions') }}">missions</a> |
-					<a href="{{ path('hvz_profile') }}">profile</a> |
-					<a href="{{ path('hvz_auth_logout', {'token': csrf_token('hvz_auth_logout')}) }}">logout</a>
-				{% else %}
-					<a href="{{ path('hvz_auth_login') }}">login</a>
-				{% endif %}
-			</p>
-		</div
-	</div>
+    {{ components.navbar('lower', 'status') }}
+
+    <div class="container">
+        <div class="row">
+            <div class="well col-md-5 text-center bg-human large-text">
+                {% if game.humans is defined %}
+                    <h1><strong>{{ game.humans }}</strong></h1>
+                    Human{% if game.humans != 1 %}s{% endif %}
+                {% else %}
+                    There is no game scheduled
+                {% endif %}
+            </div>
+            <div class="col-md-2 text-center large-text">
+                <h1>VS</h1>
+            </div>
+            <div class="well col-md-5 text-center bg-zombie large-text">
+                {% if game.zombies is defined %}
+                    <h1><strong>{{ game.zombies }}</strong></h1>
+                    Zombie{% if game.zombies != 1 %}s{% endif %}
+                {% else %}
+                    There is no game scheduled
+                {% endif %}
+            </div>
+        </div>
+        <div class="row">
+            <div id="tag-chart" class="col-md-12" style="height: 250px;">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 text-center">
+                <h1>Recent Tags</h1>
+                <p>todo</p>
+            </div>
+            <div class="col-md-6 text-center">
+                <h1>Top Zombies</h1>
+                <p>todo</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block body_javascripts %}
-	{{ parent() }}
+    {{ parent() }}
 
-	<script src="{{ asset('bundles/hvzgame/js/jquery.countdown.min.js') }}"></script>
+    {% javascripts 'bundles/hvzgame/js/jquery.countdown.min.js' %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 
-	{% if game.time is defined and game.time is not null %}
-		<script type="text/javascript" src="{{ asset('bundles/hvzgame/js/jquery.countdown.min.js') }}"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
-		<script type="text/javascript">
-			$(function() {
-				$("#countdown").countdown({
-					labels: ["<small>years</small>", "<small>months</small>", "<small>weeks</small>", "<small>days</small>", "<small>hours</small>", "<small>minutes</small>", "<small>seconds</small>"],
-					labels1: ["<small>year</small>", "<small>month</small>", "<small>week</small>", "<small>day</small>", "<small>hour</small>", "<small>minute</small>", "<small>second</small>"],
-					until: new Date({{ game.time.timestamp }}*1000),
-					layout:
-						{% verbatim %}
-							'{dn} {dl} {hn} {hl} {mn} {ml} {sn} {sl}'
-						{% endverbatim %}
-				});
-			});
-		</script>
-	{% endif %}
+    <script type="text/javascript">
+        google.load("visualization", "1", {packages:["corechart"]});
+        google.setOnLoadCallback(drawTagChart);
+
+        function drawTagChart() {
+            var data = google.visualization.arrayToDataTable([
+                ['Time', '# Tags', {role: 'tooltip'}],
+                ['21:00', 25, 'Sunday 21:00 - 25 kills'],
+                ['22:00', 10, 'Sunday 22:00 - 10 kills'],
+                ['23:00', 5, 'Sunday 23:00 - 5 kills'],
+                ['00:00', 1, 'Monday 00:00 - 1 kills'],
+                ['01:00', 1, 'Monday 01:00 - 1 kills'],
+                ['02:00', 1, 'Monday 02:00 - 1 kills'],
+                ['03:00', 1, 'Monday 03:00 - 1 kills'],
+                ['04:00', 1, 'Monday 04:00 - 1 kills'],
+                ['05:00', 3, 'Monday 05:00 - 3 kills'],
+                ['06:00', 7, 'Monday 06:00 - 7 kills'],
+                ['07:00', 10, 'Monday 07:00 - 10 kills'],
+                ['08:00', 20, 'Monday 08:00 - 20 kills'],
+                ['09:00', 13, 'Monday 09:00 - 13 kills'],
+                ['10:00', 4, 'Monday 10:00 - 4 kills'],
+                ['11:00', 8, 'Monday 11:00 - 8 kills'],
+                ['12:00', 3, 'Monday 12:00 - 3 kills'],
+            ]); // TODO: Use REST API for this
+
+            var options = {
+                title: 'Tag Timeline',
+                colors: ['black'],
+                legend: 'none'
+            };
+
+            var chart = new google.visualization.ColumnChart(document.getElementById('tag-chart'));
+            chart.draw(data, options);
+
+            $(window).resize(function() {
+                chart.draw(data, options);
+            });
+        }
+
+        {% if game.time is defined and game.time is not null %}
+            $(function() {
+                $("#countdown").countdown({
+                    labels: ["years", "months", "weeks", "days", "hours", "minutes", "seconds"],
+                    labels1: ["year", "month", "week", "day", "hour", "minute", "second"],
+                    until: new Date({{ game.time.timestamp }}*1000),
+                    layout:
+                        {% verbatim %}
+                        '<strong>{dn}</strong> {dl} <strong>{hn}</strong> {hl} <strong>{mn}</strong> {ml} <strong>{sn}</strong> {sl}'
+                        {% endverbatim %}
+                });
+            });
+        {% endif %}
+    </script>
 {% endblock %}
