--- a/src/Hvz/GameBundle/Resources/views/Game/players.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/players.html.twig
@@ -1,93 +1,100 @@
-{# src/Hvz/GameBundle/Resources/views/Game/players.html.twig #}
-{% extends 'HvzGameBundle::page.html.twig' %}
+{% extends 'HvzGameBundle::base.html.twig' %}
+{% import 'HvzGameBundle::components.html.twig' as components %}
 
-{% block stylesheets %}
-	{{ parent() }}
-
-	<style>
-		div.player-info {
-			margin-left: 10px;
-		}
-	</style>
+{% block title %}
+    Players | {{ parent() }}
 {% endblock %}
 
-{% block components %}
-	{{ parent() }}
-
-	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-button/paper-button.html') }}">
-	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-icon/core-icon.html') }}">
-	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-tooltip/core-tooltip.html') }}">
-	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-input/paper-input.html') }}">
+{% block body_def %}
+    class="navbar-offset"
 {% endblock %}
 
-{% block toolbar %}
-	<span flex>{{ parent() }}</span>
+{% block body %}
+    {{ parent() }}
+
+    {{ components.navbar('fixed-top', 'players') }}
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5 col-sm-4">
+                <div class="row">
+                    <div class="col-md-6 col-md-offset-3">
+                        <ul class="nav nav-pills">
+                            <li{% if not sort %} class="active"{% endif %}><a href="{{ path('hvz_players') }}">Team</a></li>
+                            <li{% if sort == 'clan' %} class="active"{% endif %}><a href="{{ path('hvz_players', {'sort': 'clan'}) }}">Clan</a></li>
+                            <li{% if sort == 'mods' %} class="active"{% endif %}><a href="{{ path('hvz_players', {'sort': 'mods'}) }}">Mods</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5 col-md-offset-2 col-sm-8">
+                <form role="search" action="{{ path('hvz_players_search') }}" method="get">
+                    <div class="input-group">
+                        <input name="term" type="text" class="form-control" placeholder="Search">
+                        <div class="input-group-btn">
+                            <button type="submit" class="btn btn-default">
+                                <span class="glyphicon glyphicon-search"></span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="vertical-space"></div>
+
+        <div id="player-list">
+            {% for player in players %}
+                <div class="row well {% if player.team == 'human' %}bg-human{% else %}bg-zombie{% endif %}">
+                    <div class="col-sm-2">
+                        {% if player.avatar %}
+                            <img src="{{ asset(player.avatar) }}" alt="avatar" class="avatar">
+                        {% else %}
+                            <img src="holder.js/100x100" alt="avatar" class="avatar">
+                        {% endif %}
+                    </div>
+                    <div class="col-sm-3">
+                        <p><strong>{{ player.fullname }}</strong></p>
+                        <p><strong>Tags:</strong> {{ player.tags }}</p>
+                        <p><strong>Clan:</strong> {{ player.clan | default('none') }}</p>
+                    </div>
+                    <div class="col-sm-7">
+                        {% for badge in player.badges %}
+                            <img data-toggle="tooltip" data-placement="top" data-html="true"
+                                 title="<p><strong>{{ badge.name }}</strong></p><p>{{ badge.description }}</p>"
+                                 src="{{ asset('bundles/hvzgame/images/badges/' ~ badge.image) }}"
+                                 alt="{{ badge.name }} badge">
+                        {% endfor %}
+                    </div>
+                </div>
+            {% else %}
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <h1>There were no players found</h1>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        {% if previous_page is defined or next_page is defined %}
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <ul class="pager">
+                        {% if previous_page is defined and previous_page != -1 %}
+                            <li><a href="{{ path('hvz_players', {'page': previous_page, 'sort': sort}) }}">&larr; Previous</a></li>
+                        {% endif %}
+                        {% if next_page is defined and next_page != -1%}
+                            <li><a href="{{ path('hvz_players', {'page': next_page, 'sort': sort}) }}">Next &rarr;</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        {% endif %}
+    </div>
 {% endblock %}
 
 {% block content %}
 	{{ parent() }}
-
-	<div horizontal layout center center-justified>
-		<core-icon icon="filter"></core-icon>
-		<a href="{{ path('hvz_players') }}"><paper-button label="Team"></paper-button></a>
-		<a href="{{ path('hvz_players', {'sort': 'clan'}) }}"><paper-button label="Clan"></paper-button></a>
-		<a href="{{ path('hvz_players', {'sort': 'mods'}) }}"><paper-button label="Mods"></paper-button></a>
-	</div>
-
-	<div horizontal layout center center-justified>
-		<div class="card">
-			<paper-shadow z="1"></paper-shadow>
-			<div class="card-internal">
-				<form id="search_form" action="{{ path('hvz_players_search') }}" method="get">
-					<input type="hidden" id="search_term_hidden" name="term">
-				</form>
-
-				<div horizontal layout center wrap center-justified>
-					<paper-input label="Search" id="search_term"></paper-input>
-					<div>
-						<paper-button label="Search" onclick="search()"></paper-button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	{% for player in players %}
-		<div class="card {% if player.team == 'human' %}card-human{% else %}card-zombie{% endif %}" horizontal layout>
-			<paper-shadow z="1"></paper-shadow>
-			<div class="card-internal" horizontal layout wrap>
-				<div class="card" style="width: 100px; height: 100px;" vertical layout center center-justified>
-					<paper-shadow z="2"></paper-shadow>
-					<div class="card-internal">
-						{% if player.avatar %}
-							<img src="{{ asset(player.avatar) }}" alt="avatar" class="avatar">
-						{% else %}
-							<img src="holder.js/100x100" alt="avatar" class="avatar">
-						{% endif %}
-					</div>
-				</div>
-				<div class="player-info card-section">
-					<h3 class="header" style="color: black;">{{ player.fullname }}</h3>
-					<p><strong>Tags: </strong> {{ player.tags }}</p>
-					<p><strong>Clan:</strong> {{ player.clan | default('none') }}</p>
-				</div>
-				<div class="card-section" horizontal layout wrap>
-					{% for badge in player.badges %}
-						<core-tooltip class="badge">
-							<div>
-								<img src="{{ asset('bundles/hvzgame/images/badges/' ~ badge.image) }}"
-									alt="{{ badge.name }} badge">
-							</div>
-							<div tip>
-								<p><strong>{{ badge.name }}</strong></p>
-								<p>{{ badge.description }}</p>
-							</div>
-						</core-tooltip>
-					{% endfor %}
-				</div>
-			</div>
-		</div>
-	{% endfor %}
 
 	{% if previous_page is defined or next_page is defined %}
 		<div horizontal layout center center-justified>
@@ -107,14 +114,11 @@
 {% endblock %}
 
 {% block body_javascripts %}
-	{{ parent() }}
+    {{ parent() }}
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.3.1/holder.min.js"></script>
-
-	<script>
-		function search() {
-			$("#search_term_hidden").val($("#search_term").val());
-			$("#search_form").submit();
-		}
-	</script>
+    <script type="text/javascript">
+        $(function() {
+            $("[data-toggle='tooltip']").tooltip();
+        });
+    </script>
 {% endblock %}
