--- a/src/Hvz/GameBundle/Resources/views/Game/status.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/status.html.twig
@@ -1,6 +1,10 @@
 {% extends 'HvzGameBundle::base.html.twig' %}
 {% import 'HvzGameBundle::components.html.twig' as components %}
 
+{% block title %}
+    Status | {{ parent() }}
+{% endblock %}
+
 {% block body %}
     {{ parent() }}
 
@@ -28,7 +32,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="well col-md-5 text-center bg-human large-text">
+            <div class="well col-sm-5 text-center bg-human large-text">
                 {% if game.humans is defined %}
                     <h1><strong>{{ game.humans }}</strong></h1>
                     Human{% if game.humans != 1 %}s{% endif %}
@@ -36,10 +40,10 @@
                     There is no game scheduled
                 {% endif %}
             </div>
-            <div class="col-md-2 text-center large-text">
+            <div class="col-sm-2 text-center large-text">
                 <h1>VS</h1>
             </div>
-            <div class="well col-md-5 text-center bg-zombie large-text">
+            <div class="well col-sm-5 text-center bg-zombie large-text">
                 {% if game.zombies is defined %}
                     <h1><strong>{{ game.zombies }}</strong></h1>
                     Zombie{% if game.zombies != 1 %}s{% endif %}
@@ -53,11 +57,11 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 text-center">
+            <div class="col-sm-6 text-center">
                 <h1>Recent Tags</h1>
                 <p>todo</p>
             </div>
-            <div class="col-md-6 text-center">
+            <div class="col-sm-6 text-center">
                 <h1>Top Zombies</h1>
                 <p>todo</p>
             </div>
