--- a/src/Hvz/GameBundle/Resources/views/base.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/base.html.twig
@@ -13,7 +13,7 @@
 
 	<link rel="shortcut icon" type="image/png" href="{{ asset('bundles/hvzgame/images/favicon.png') }}">
 
-	<title>{{ title | default('Humans vs Zombies') }}</title>
+    <title>{% block title %}HvZ @ RIT{% endblock %}</title>
 
 	{% block stylesheets %}
         {% stylesheets
@@ -36,7 +36,7 @@
 	{% block head %}
 	{% endblock %}
 </head>
-<body>
+<body{% block body_def %}{% endblock %}>
 	{% block body %}
 	{% endblock %}
 
