--- a/src/Hvz/GameBundle/Resources/public/css/app.css
+++ b/src/Hvz/GameBundle/Resources/public/css/app.css
@@ -87,3 +87,10 @@ body.navbar-offset {
 .vertical-space-sm {
     height: 10px;
 }
+
+a.offset {
+    display: block;
+    position: relative;
+    top: -80px;
+    visibility: hidden;
+}
