--- a/src/Hvz/GameBundle/Resources/views/Game/tags.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/tags.html.twig
@@ -1,10 +1,45 @@
-{# src/Hvz/GameBundle/Resources/views/Game/tags.html.twig #}
-{% extends 'HvzGameBundle::page.html.twig' %}
+{% extends 'HvzGameBundle::base.html.twig' %}
+{% import 'HvzGameBundle::components.html.twig' as components %}
 
-{% block components %}
-	{{ parent() }}
+{% block title %}
+    Tags | {{ parent() }}
+{% endblock %}
 
-	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-button/paper-button.html') }}">
+{% block body_def %}
+    class="navbar-offset"
+{% endblock %}
+
+{% block body %}
+    {{ parent() }}
+
+    {{ components.navbar('fixed-top', 'tags') }}
+
+    <div class="container">
+        <div class="vertical-space"></div>
+        <div class="vertical-space-sm"></div>
+        <div class="row">
+            <div id="tag-list" class="col-md-12 text-center">
+                {% for tag in tags if tag.zombie != null %}
+                    <p><strong>{{ tag.victim }}</strong> was tagged by <strong>{{ tag.zombie }}</strong> <em>{{ time_diff(tag.time) }}</em></p>
+                {% endfor %}
+            </div>
+        </div>
+
+        {% if previous_page is defined or next_page is defined %}
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <ul class="pager">
+                        {% if previous_page is defined and previous_page != -1 %}
+                            <li><a href="{{ path('hvz_tags', {'page': previous_page}) }}">&larr; Previous</a></li>
+                        {% endif %}
+                        {% if next_page is defined and next_page != -1%}
+                            <li><a href="{{ path('hvz_tags', {'page': next_page}) }}">Next &rarr;</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        {% endif %}
+    </div>
 {% endblock %}
 
 {% block content %}
