--- a/src/Hvz/GameBundle/Resources/views/Game/register_tag.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/register_tag.html.twig
@@ -1,69 +1,72 @@
-{# src/Hvz/GameBundle/Resources/views/Game/register_tag.html.twig #}
-{% extends 'HvzGameBundle::page.html.twig' %}
+{% extends 'HvzGameBundle::base.html.twig' %}
+{% import 'HvzGameBundle::components.html.twig' as components %}
 
-{% block components %}
-	{{ parent() }}
-
-	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-input/paper-input.html') }}">
-	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-button/paper-button.html') }}">
+{% block title %}
+    Register Tag | {{ parent() }}
 {% endblock %}
 
-{% block content %}
-	{{ parent() }}
+{% block body_def %}
+    class="navbar-offset"
+{% endblock %}
 
-	{% if errors is defined and errors is not null %}
-		<div class="card card-error" flex>
-			<paper-shadow z="1"></paper-shadow>
-			<div class="card-internal">
-				<ul>
-					{% for error in errors %}
-						<li>{{ error }}</li>
-					{% endfor %}
-				</ul>
-			</div>
-		</div>
-	{% endif %}
+{% block body %}
+    {{ parent() }}
 
-	<div class="card" flex>
-		<paper-shadow z="1"></paper-shadow>
-		<div class="card-internal" vertical layout center>
-			<div>
-				<small>
-					Enter AV codes in the victim field and the target's player id in the zombie field.
-					AVs cannot be used between 5PM and 11PM, and must be used before 2AM on Friday.
-				</small>
-			</div>
-			<paper-input floatinglabel id="victim_id" label="Victim Tag" {% if victim %}value="{{ victim }}"{% endif %}></paper-input>
-			<paper-input floatinglabel id="zombie_id" label="Zombie ID" {% if zombie %}value="{{ zombie }}"{% endif %}></paper-input>
-			<paper-button id="submit_tag" label="Submit" raisedButton></paper-button>
-			<div style="margin-top: 5px;">
-				<small>Location: <span id="loc-status">NOT SENDING</span></small>
-			</div>
-			<form id="tag_form" method="post" action="{{ path('hvz_register_tag_submit') }}">
-				<input type="hidden" name="_token" value="{{ csrf_token('hvz_register_tag') }}">
-				<input type="hidden" id="victim_id_hidden" name="victim">
-				<input type="hidden" id="zombie_id_hidden" name="zombie">
-				<input type="hidden" id="latitude" name="latitude">
-				<input type="hidden" id="longitude" name="longitude">
-			</form>
-		</div>
-	</div>
+    {{ components.navbar('fixed-top', 'register-tag') }}
+
+    <div class="container">
+        <div class="vertical-space"></div>
+
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2>Register Tag</h2>
+            </div>
+        </div>
+
+        {% if errors %}
+            <div id="errors">
+                {% for error in errors %}
+                    <div class="row">
+                        <div class="col-md-4 col-md-offset-4">
+                            <p class="bg-warning">{{ error }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endif %}
+
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <form method="post" action="{{ path('hvz_register_tag_submit') }}">
+                    <input type="hidden" name="_token" value="{{ csrf_token('hvz_register_tag') }}">
+                    <input type="hidden" name="latitude" id="latitude">
+                    <input type="hidden" name="longitude" id="longitude">
+                    <div class="form-group">
+                        <label for="victim_id">Victim Tag</label>
+                        <input type="text" class="form-control" id="victim_id" name="victim" placeholder="victim id"
+                               {% if victim %}value="{{ victim }}"{% endif %}>
+                    </div>
+                    <div class="form-group">
+                        <label for="zombie_id">Zombie ID</label>
+                        <input type="text" class="form-control" id="zombie_id" name="zombie" placeholder="zombie id"
+                                {% if zombie %}value="{{ zombie }}"{% endif %}>
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </form>
+                <p class="text-muted">Location: <span id="loc-status">NOT SENDING</span></p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block body_javascripts %}
 	{{ parent() }}
 
-	<script>
+	<script type="text/javascript">
 		$(function() {
 			$(function() {
 				$("#latitude").val(null);
 				$("#longitude").val(null);
-			});
-
-			$('#submit_tag').click(function() {
-				$('#victim_id_hidden').val($('#victim_id').val());
-				$('#zombie_id_hidden').val($('#zombie_id').val());
-				$('#tag_form').submit();
 			});
 
 			navigator.geolocation.getCurrentPosition(function(pos) {
