--- a/src/Hvz/GameBundle/Resources/views/Game/register_tag.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/register_tag.html.twig
@@ -43,7 +43,7 @@
                     <input type="hidden" name="longitude" id="longitude">
                     <div class="form-group">
                         <label for="victim_id">Victim Tag</label>
-                        <input type="text" class="form-control" id="victim_id" name="victim" placeholder="victim id"
+                        <input type="text" class="form-control" id="victim_id" name="victim" placeholder="victim tag"
                                {% if victim %}value="{{ victim }}"{% endif %}>
                     </div>
                     <div class="form-group">
